tests/rosetta/transpiler/Clojure/catalan-numbers-pascals-triangle.error
run error: exit status 1
Syntax error compiling at (/workspace/mochi/tests/rosetta/transpiler/Clojure/catalan-numbers-pascals-triangle.clj:22:41).
Unable to resolve symbol: main_i in this context

Full report at:
/tmp/clojure-8435863498873504664.edn
